# cos-cpp-sdk-v5

./: CMakeLists.txt
include/: cos_api.h  cos_defines.h
include/op/: object_op.h
include/util/: string_util.h
src/: CMakeLists.txt  cos_api.cpp
src/op/: object_op.cpp
src/util/: http_sender.cpp  string_util.cpp
